# schrodinger-solver-web

./: .gitignore  PROJECT_REQUIREMENTS.md  README.md  USER_GUIDE.html  pyproject.toml  requirements.txt  streamlit_app.py
.devcontainer/: devcontainer.json
src/schrodinger_solver_web/: __init__.py  app.py
src/schrodinger_solver_web/export/: csv_export.py  png_export.py
src/schrodinger_solver_web/solver/: __init__.py  benchmarks.py  eigensolver.py  grid.py  hamiltonian.py  potential_parser.py  potential_templates.py  validation.py
src/schrodinger_solver_web/ui/: plots.py  sidebar.py  templates.py
tests/: test_benchmarks.py  test_eigensolver.py  test_export.py  test_hamiltonian.py  test_potential_parser.py  test_potential_templates.py  test_validation.py
