[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "schrodinger-solver-web"
version = "0.1.0"
description = "Correctness-first Streamlit app for 1D time-independent Schrodinger equation experiments."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "scipy>=1.12",
  "streamlit>=1.42",
  "plotly>=5.24",
  "kaleido>=0.2.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
]

[project.scripts]
schrodinger-solver-web = "schrodinger_solver_web.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

